--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Pipeline DevOps - Succès du Déploiement 🚀</title>
+    <title>Pipeline DevOps - Succès  Déploiement 🚀</title>
     
     <style>
         /* Réinitialisation de base */
