--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
             Le code source a été extrait, testé et déployé sur ce serveur en **quelques secondes**.
         </p>
         <p>
-            Célébrez l'automatisation, la rapidité et la fiabilité !
+            Célébrez  la bonne l'automatisation, la rapidité et la fiabilité !
         </p>
 
         <a href="https://github.com/votre_repo" class="btn" target="_blank">
